# dice

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  install-hooks.sh  justfile
.claude/skills/dice-design/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: automerge.yaml  ci.yaml  cve-scan.yaml  dockerimage.yaml
backend/: CLAUDE.md  Cargo.toml  bacon.toml
backend/src/: config.rs  error.rs  guard.rs  lib.rs  main.rs  persist.rs  room.rs  routes.rs  ws.rs
frontend/: .gitignore  CLAUDE.md  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: dicetray.spec.ts  farkle.spec.ts  golden.spec.ts  joinprompt.spec.ts  liars.spec.ts  rejoin.spec.ts  yatzy-paged.spec.ts  yatzy.spec.ts
frontend/scripts/: gen-icons.sh
frontend/src/: app.html
frontend/src/lib/: api.ts  qr.ts
frontend/src/lib/components/: DiceBackground.svelte  DiceStage.svelte  DiceTray.svelte  FarkleBoard.svelte  FarkleRules.svelte  Fireworks.svelte  LangToggle.svelte  LiarsBoard.svelte  Modal.svelte  NixieDice.svelte  PlayerList.svelte  QrScanner.svelte  RollHistory.svelte  Select.svelte  SharePanel.svelte  Switch.svelte  ThemeToggle.svelte  Toast.svelte  Toolbar.svelte  WinnerGlow.svelte  Wordmark.svelte  YatzyBoard.svelte
frontend/src/lib/dice/: DiceScene.ts  decks.ts  nixieScene.ts  orient.ts  shapes.ts  themes.ts
frontend/src/lib/dice/__tests__/: orient.test.ts  shapes.test.ts  themes.test.ts
frontend/src/lib/games/: farkle.ts
frontend/src/lib/games/__tests__/: farkle.test.ts
frontend/src/lib/i18n/: en.ts  fi.ts  i18n.svelte.ts
frontend/src/lib/stores/: audio.svelte.ts  farkle.svelte.ts  game.svelte.ts  liars.svelte.ts  session.svelte.ts  shake.svelte.ts  theme.svelte.ts  wakelock.ts  ws.svelte.ts  yatzy.svelte.ts
frontend/src/lib/styles/: halo.css
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/g/[code]/: +page.svelte
frontend/static/: manifest.webmanifest
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: api.rs  guards.rs
