# One Rust workspace for the dice backend (+ integration tests later). Crates
# share this [workspace.dependencies] table, one Cargo.lock, and one target/.
[workspace]
resolver = "2"
members = [
    "backend",
    "integration",
]

[workspace.package]
edition = "2021"
version = "1.0.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "tokio", "tracing"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["fs", "set-header", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
dotenvy = "0.15"
rand = "0.9"

# dev-deps (used by the integration crate)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
# default-features=false → no native-tls/openssl; plain ws:// only (tests are loopback).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
