[package]
name = "dice-backend"
version.workspace = true
edition.workspace = true

[lib]
name = "dice_backend"
path = "src/lib.rs"

[[bin]]
name = "dice-backend"
path = "src/main.rs"

[dependencies]
# `ws` is added on top of the workspace feature set (cargo unions features).
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
